# autoseg

./: .gitignore  LICENSE  README.md  batch_run.py  dev_requirements.txt  dev_requirments.txt  install.sh  setup.cfg
.github/workflows/: black.yaml  loss_tests.yaml  model_tests.yaml  network_tests.yaml  tests.yaml
config/: config.json
log/: events.out.tfevents.1701113995.lee-htem-gpu0
optoseg/: README.md  go.mod
optoseg/src/: main.go
optoseg/src/algo/genetic/: evolve.go  types.go  utils.go
optoseg/src/algo/grid/: gridsearch.go  types.go
optoseg/src/jobs/: job.go
segmonitor/: Cargo.toml
segmonitor/src/: lib.rs  main.rs
src/autoseg/: __init__.py  train_job.py  utils.py  webknossos.py
src/autoseg/eval/: __init__.py  database.py  eval_db.py  evaluate.py  metrics.py
src/autoseg/gp_filters/: __init__.py  random_noise.py  smooth_array.py
src/autoseg/losses/: ACLSDLoss.py  GANLoss.py  GMSELoss.py  MSELoss.py  __init__.py  gan_loss.py  mtlsd_losses.py
src/autoseg/models/: ACLSDModel.py  MTLSDModel.py  STELARRModel.py  __init__.py  stelarr_model.py
src/autoseg/networks/: FLibUNet.py  NLayerDiscriminator.py  NoiseBlocks.py  ResNet.py  ResidualUNet.py  UNet.py  __init__.py
src/autoseg/postprocess/: __init__.py  segment_mws.py  segment_skel_correct.py
src/autoseg/predict/: __init__.py  network_predictions.py
src/autoseg/train/: ACLSDTrain.py  MTLSDTrain.py  PreTrainPipe.py  STELARRTrain.py  __init__.py
tests/: __init__.py
tests/eval/: db_test.py
tests/gp_filters/: random_noise_test.py
tests/losses/: gan_loss.py  gan_loss_test.py  gmse_loss_test.py  mse_loss.py  mse_loss_test.py
tests/models/: aclsd_test.py  mtlsd_test.py  stelarr_test.py
tests/networks/: nlayerdiscriminator_test.py  unet_test.py
