[metadata]
name = autoseg
version = 0.1.0
author = Brian Reicher
author_email = reicher.b@northeastern.edu
url = https://github.com/htem/autoseg
description = Automated deep learning segmentation for large-scale biological datasets.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = parallel-computing, image-segmentation, mutex-watershed
license = Apache Software License
classifiers =
    Programming Language :: Python :: 3


[options]
packages = find:
package_dir=
    =src
zip_safe = True
include_package_data = True
install_requires =
    rusty_mws @ git+https://github.com/brianreicher/rusty_mws
    hglom @ git+https://github.com/brianreicher/hierarchical_agglom
    torch
    torchvision
    torchaudio
    lsds
    tensorboard
    tensorboardx
    networkx
    pysqlite3
    numpy
    pymongo
    scikit-image==0.21.0
    daisy
    zarr
    cython
    mwatershed @ git+https://github.com/pattonw/mwatershed
    funlib.geometry @ git+https://github.com/funkelab/funlib.geometry
    funlib.persistence @ git+https://github.com/funkelab/funlib.persistence
    funlib.segment @ git+https://github.com/funkelab/funlib.segment
    funlib.evaluate @ git+https://github.com/pattonw/funlib.evaluate.git
    gunpowder @ git+https://github.com/funkey/gunpowder
[options.packages.find]
where=src

